<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yagi2.eorzeawatchface.MainActivity">

      <RadioGroup
            android:id="@+id/frame_radio_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_frame_text"
                android:textColor="#000000"
                android:paddingBottom="3dp"/>
            <RadioButton
                android:id="@+id/frame_ishgald"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="ishgald"
                android:text="@string/ishgald_frame_text"/>
            <RadioButton
                android:id="@+id/frame_gridania"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="gridania"
                android:text="@string/gridania_frame_text"/>
            <RadioButton
                android:id="@+id/frame_limsa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="limsa"
                android:text="@string/limsa_frame_text"/>
            <RadioButton
                android:id="@+id/frame_uldah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="uldah"
                android:text="@string/uldah_frame_text"/>
            <RadioButton
                android:id="@+id/frame_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="none"
                android:text="@string/no_frame_text"/>
        </RadioGroup>
</RelativeLayout>
